Reformat code using a modified scijava style